Fix footer spacing

--- a/assets/css/site/footer.css
+++ b/assets/css/site/footer.css
@@ -1,7 +1,3 @@
-.site-footer {
-    margin-top: 30px;
-}
-
 .site-footer .social {
     justify-content: center;
     margin-bottom: 15px;
