--- a/assets/css/site/layout.css
+++ b/assets/css/site/layout.css
@@ -7,7 +7,6 @@
 .site-content {
     flex-grow: 1;
     padding-top: 30px;
-    padding-bottom: 30px;
 }
 
 @media (min-width: 992px) {
